1.17: cleanup